move modules files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/planmyday.css">
     <link rel="stylesheet" href="dist/vendor/lightgallery/css/lightgallery.min.css">
     <link rel="stylesheet" href="dist/vendor/lightgallery/css/lightgallery-bundle.min.css">
-    <title>Raffi &amp; Nagita</title>
+    <title>Gabriel &amp; Caleb's Wedding</title>
 </head>
 <body class="plan-my-day fixed-body">
     <div class="popup-opening" id="opening">
