--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kami Mengundang anda Untuk hadir Di Acara Pernikahan Kami. Pada Selasa, 18 Oktober 2022 mulai pukul 09.00 WIB - Selesai" />
+    <meta property="og:title" content="The Wedding of Shintya and Aziz" />
+    <meta property="og:url" content="https://shintyaaziz.planmyday.net/" />
+    <meta property="og:description" content="Kami Mengundang anda Untuk hadir Di Acara Pernikahan Kami. Pada Selasa, 18 Oktober 2022 mulai pukul 09.00 WIB - Selesai" />
+    <meta property="og:image" content="dist/images/galleries/thumbnails/49.jpg" />
+    <meta name="author" content="Plan My Day">
     <!-- css -->
     <link rel="stylesheet" href="dist/css/planmyday.min.css">
     <link rel="stylesheet" href="dist/vendor/lightgallery/css/lightgallery.min.css">
