fixing some feedbacks

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           <div class="pmd-ornament-flower">
             <img
               class="orm-pmd__flower-01"
-              src="dist/images/ornaments/decor_flower_01.svg"
+              src="dist/images/ornaments/decor_flower_01.gif"
               alt="ornament flower 1"
             />
           </div>
@@ -410,7 +410,8 @@
             data-aos-duration="1000"
             data-aos-delay="500"
           >
-            Assalamualaikum Warahmatullahi Wabarakatuh
+            Assalamualaikum <br />
+            Warahmatullahi Wabarakatuh
           </p>
 
           <h4
@@ -460,7 +461,11 @@
             data-aos-delay="500"
           >
             <picture>
-              <img src="dist/images/galleries/SASHA.png" alt="Sasha" />
+              <img
+                src="dist/images/galleries/SASHA.png"
+                alt="Sasha"
+                width="360"
+              />
             </picture>
           </div>
           <div
@@ -470,7 +475,11 @@
             data-aos-delay="500"
           >
             <picture>
-              <img src="dist/images/galleries/PANDU.png" alt="Pandu" />
+              <img
+                src="dist/images/galleries/PANDU.png"
+                alt="Pandu"
+                width="360"
+              />
             </picture>
           </div>
           <div class="grid-profile__name groom">
@@ -480,7 +489,7 @@
               data-aos-duration="1000"
               data-aos-delay="700"
             >
-              RM. Ahmad Ali Pandubuwana, A.Md.Ds.
+              R. Ahmad Ali Pandubuwana, A.Md.Ds
             </h1>
             <p
               class="desc-address"
@@ -682,7 +691,7 @@
             data-aos-duration="1000"
             data-aos-delay="700"
           >
-            <span>LIHAT LOKASI</span>
+            <span>BUKA MAP</span>
           </a>
           <!-- Boyongan -->
           <div
@@ -733,7 +742,6 @@
 
               <div class="details">
                 <p>Sabtu, <b>10</b> Desember <b>2022</b></p>
-                <p class="mt-10"><b>13.00</b> WIB s.d selesai</p>
                 <div class="date-flex">
                   <div class="flex-left">
                     <p>Sesi Pertama</p>
@@ -777,7 +785,7 @@
             data-aos-duration="1000"
             data-aos-delay="700"
           >
-            <span>LIHAT LOKASI</span>
+            <span>BUKA MAP</span>
           </a>
         </div>
       </section>
@@ -787,7 +795,7 @@
           <div class="gallery-slider">
             <picture>
               <img
-                src="dist/images/galleries/gallery-01.png"
+                src="dist/images/galleries/PHOTO-SLIDE-1.png"
                 alt="gallery-01"
                 width="360"
               />
@@ -1015,7 +1023,8 @@
             data-aos-duration="1000"
             data-aos-delay="600"
           >
-            Wassalamualaikum Warahmatullahi Wabarakatuh:
+            Wassalamualaikum <br />
+            Warahmatullahi Wabarakatuh
           </p>
         </div>
         <div class="content" role="aside">
